# neutron-transport-monte-carlo

./: .gitignore  Cargo.toml  README.md
config/geometries/: cruciform_rods.toml  heat_diffusion_test.toml
config/simulation/: default.toml  reference.toml
scripts/general/: sandbox.ipynb
scripts/geometry_creation/: components.py  create_plate_cruciform_geometry.py  utils.py  vtk_conversion.py
scripts/post_processing/: analyze_temperatures.py  csv_to_vtk.py  plot_convergence.py  plot_geometry_slice.py  plot_moderation.py  process_neutron_positions.py  track_power.py
src/: diagnostics.rs  main.rs  neutrons.rs
src/diagnostics/: data_post_processing.rs  diagnostics_tracking.rs  plotting.rs
src/geometry/: components.rs
src/geometry/parts/: cuboid.rs  cylinder.rs  sphere.rs
src/heat_diffusion/: heat_diffusion_rework.rs
src/materials/material_properties/: u238.rs
src/neutrons/: neutron_dynamics.rs  neutron_scheduler.rs  watt_distribution.rs
src/simulation/: aggregate_runs.rs  initialization.rs  simulation.rs
src/simulation/aggregate_runs/: post_processing.rs  report_creation.rs  standard_simulation.rs
src/utils/: config_loading.rs  data_writing.rs  vectors.rs
tests/: component_tests.rs  criticality_validation.rs
