[package]
name = "nuclear"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
csv="1.3"
env_logger = "0.11.8"
indicatif = "0.18.0"
itertools = "0.14.0"
log = "0.4.28"
rand = { version = "0.9.2", features = [ "small_rng" ] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"

[profile.release] 
opt-level=3
# debug = 2

[profile.test] 
opt-level=3
